# serverless-rust-examples

./: Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
aws-rust/: Cargo.toml  README.md  package-lock.json  serverless.yml
aws-rust-text-analysis-via-sns-post-processing/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
aws-rust-text-analysis-via-sns-post-processing/add_note/: Cargo.toml
aws-rust-text-analysis-via-sns-post-processing/add_note/src/: main.rs
aws-rust-text-analysis-via-sns-post-processing/analyze_note/: Cargo.toml
aws-rust-text-analysis-via-sns-post-processing/analyze_note/src/: main.rs
aws-rust-text-analysis-via-sns-post-processing/tests/: add-note.json  add-note_success.json  analyze-note.json
aws-rust/src/: main.rs
hello/: Cargo.toml
test/: event.json
