[package]
name = "aws-rust-text-analysis-via-sns-post-processing"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
rusoto_sns = "0.44.0"
tokio = { version = "0.2.22", features = ["macros"] }
serde_json = "1.0.56"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.114", features = ["derive"] }
mime = "0.3.16"
sentiment = "0.1.1"
aws_lambda_events = "0.3.0"
