[package]
name = "analyze_note"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.3.0"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
log = "0.4.11"
pretty_env_logger = "0.4.0"
sentiment = "0.1.1"
tokio = { version = "0.2.22", features = ["macros"] }